@@ -6,6 +6,12 @@ vX.Y.X (YYYY-MM-DD)
 - pgsql: parallelize index creation
 - replace semicolons (;) returned from pg_config with spaces in the build
   system, needed with newer pgsql releases
+- AppImage: revert linuxdeploy tool updates back to appimagetool
+- AppImage: bump touchstone-tools version to v0.9.0
+- AppImage: bump dbttools version to v0.5.1
+- AppImage: bump psql version to v11.22
+- AppImage: fix toml version to 0.2.3
+- AppImage: fix docutils version to 0.21.2
 
 v0.61.2 (2024-04-01)
 
